--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 						<ul>
 							<li><a href="/~sandyna/cookbook/index.html">Recipe list</a></li>
 							<li><a href="/~sandyna/cookbook/new_recipe.html">Add new recipe</a></li>
-							<li><a href="/~sandyna/cookbook/plant_calendar/plant_calendar.html">Plant Calendar</a></li>
+							<li><a href="/cookbook/plant_calendar/plant_calendar.html">Plant Calendar</a></li>
 						</ul>
 					</div>
 				</div>
