--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
 					<div class="navi">
 						<h1>Menu</h1>
 						<ul>
-							<li><a href="/~sandyna/cookbook/index.html">Recipe list</a></li>
-							<li><a href="/~sandyna/cookbook/new_recipe.html">Add new recipe</a></li>
-							<li><a href="/cookbook/plant_calendar/plant_calendar.html">Plant Calendar</a></li>
+							<li><a href="/cookbook/index.html">Recipe list</a></li>
+							<li><a href="/cookbook/new_recipe.html">Add new recipe</a></li>
+							<li><a href="/plant_calendar/plant_calendar.html">Plant Calendar</a></li>
 						</ul>
 					</div>
 				</div>
