--- a/plant_calendar/style.css
+++ b/plant_calendar/style.css
@@ -6,7 +6,7 @@ body {
   background-color: #f4f4f9;
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: flex-start;
 }
 
 #calendar-container {
@@ -90,6 +90,7 @@ button:hover {
 #custom-plant-form button:hover {
   background-color: #45a049;
 }
+
 
 
 
