--- a/plant_calendar/style.css
+++ b/plant_calendar/style.css
@@ -13,6 +13,7 @@ body {
   width: 80%;
 /*  max-width: 1200px;*/
   margin-top: 30px;
+  margin-left: 30px;
   display: flex;
   flex-wrap: wrap;  /* Allow months to wrap into rows */
   justify-content: left;
@@ -21,8 +22,8 @@ body {
 .calendar-month {
   width: 8.3%;  /* Each month takes up about 1/12 of the container width */
 /*  margin: 10px; */
-  border: 1px solid #ccc;
-  padding: 10px;
+/*  border: 1px solid #ccc;*/
+/*  padding: 10px;*/
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -44,7 +45,7 @@ body {
   text-align: left;
   cursor: pointer;
   min-height: 30px;
-  margin-bottom: 5px;  /* Space between days */
+  /* margin-bottom: 5px;  Space between days */
 }
 
 .calendar-day:hover {
@@ -90,6 +91,7 @@ button:hover {
 #custom-plant-form button:hover {
   background-color: #45a049;
 }
+
 
 
 
